# lned

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
crates/edit_buf/: Cargo.toml
crates/edit_buffer/: Cargo.toml
crates/edit_buffer/src/: lib.rs
crates/lned/: Cargo.toml
dev_docs/: architecture.md  design.md  features.md
docs/: manual.md
docs/dev/: archetecture.md  command_grammar.md  design.md  features.md
docs/user/: manual.md
line_input/: Cargo.toml
line_input/dev_docs/: design.md  repaint.md
line_input/src/: lib.rs  main.txt
line_reader/: Cargo.toml
line_reader/dev_docs/: design.md  repaint.md
line_reader/src/: edit_buffer.rs  history_stack.rs  lib.rs  render_context.rs  renderer.rs
lned/: Cargo.toml  build.rs
lned/dev_docs/: ideas.md
lned/docs/: manual.md
lned/src/: cli.rs  command.rs  edit_buffer.rs  iter_utils.rs  main.rs  main_loop.rs  num_utils.rs  str_utils.rs
lned/src/edit_buffer/: undo_stack.rs
lned/test/assets/: text_with_final_eol.txt  text_with_no_final_eol.txt
src/: char_utils.rs  cli.rs  cmd_loop.rs  command.rs  edit_buffer.rs  editor.rs  eol.rs  error.rs  iter_utils.rs  lib.rs  main.rs  main_loop.rs  num_utils.rs  peeking.rs  str_utils.rs  undo_stack.rs
src/edit_buffer/: operation.rs  undo_stack.rs
