[package]
name = "lned"
description = "A line oriented text editor"
version = "0.6.0"
build = "build.rs"
edition = "2024"

[dependencies]
lexopt = "0.3.1"
regex = "1.12.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
wild = "2.2.1"
line_edit = { version = "0.5.1", git = "https://github.com/Sindisil/line_edit.git" }
similar = { version = "2.7.0", features = ["unicode"] }
crossterm = "0.29.0"

[lints.rust]
elided_lifetimes_in_paths = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
similar-asserts = "1.6.0"
tempfile = "3.20.0"
