[package]
name = "line_reader"
description = "accept a line of input (similar to read-line)"
version = "0.1.0"
edition = "2021"


[dependencies]
crossterm = "0.27.0"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.11"

[lints.rust]
elided_lifetimes_in_paths = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
similar-asserts = "1.6.0"
