[package]
name = "line_reader"
description = "accept a line of input (similar to read-line)"
version = "0.3.0"
edition = "2024"


[dependencies]
crossterm = "0.29.0"
regex = "1.11.2"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[lints.rust]
elided_lifetimes_in_paths = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
similar-asserts = "1.6.0"
