[package]
name = "lned"
description = "A line oriented text editor"
version = "0.2.0"
edition = "2021"

[dependencies]
lexopt = "0.3.0"
regex = "1.8.1"
unicode-segmentation = "1.10.1"
wild = "2.1.0"
line_reader = { path = "../line_reader" }

[lints.rust]
elided_lifetimes_in_paths = "deny"

unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
[lints.clippy]
pedantic = "warn"

[dev-dependencies]
similar-asserts = "1.6.0"
